[tool.poetry]
name = "posenet-tvm"
version = "0.1.0"
description = ""
authors = ["Sasha Illarionov <sasha@sdll.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
opencv-python = "^4.2.0"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
